<resources>
    <string name="app_name">UIComponent</string>
    <string name="pria">pria</string>
    <string name="wanita">wanita</string>
    <string name="coding">Coding</string>
    <string name="reading">Reading</string>
    <string name="nama">Nama</string>
    <string name="gender">Gender</string>
    <string name="hobi">Hobi</string>
    <string name="traveling">Traveling</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
</resources>